--- a/FutureStop/MainStoryboard_iPhone.storyboard
+++ b/FutureStop/MainStoryboard_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="tnd-HP-Qyz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3012" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="tnd-HP-Qyz">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1924"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--View Controller - Select Mode-->
@@ -61,23 +61,25 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="x8A-vY-Jwn">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7J-pQ-ZtJ">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="194" id="gB2-wF-CTs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="64"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.94784214984939763" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="x8A-vY-Jwn" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="EE0-A9-Pon"/>
-                            <constraint firstItem="x8A-vY-Jwn" firstAttribute="leading" secondItem="Y9o-so-s2T" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="KsC-Pi-Vi7"/>
-                            <constraint firstAttribute="bottom" secondItem="x8A-vY-Jwn" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="X4b-du-GBr"/>
-                            <constraint firstItem="x8A-vY-Jwn" firstAttribute="top" secondItem="Y9o-so-s2T" secondAttribute="top" constant="20" symbolic="YES" type="default" id="dZr-Ek-FX1"/>
+                            <constraint firstItem="q7J-pQ-ZtJ" firstAttribute="bottom" secondItem="Y9o-so-s2T" secondAttribute="bottom" type="default" id="NfN-Hz-zh0"/>
+                            <constraint firstItem="q7J-pQ-ZtJ" firstAttribute="trailing" secondItem="Y9o-so-s2T" secondAttribute="trailing" type="default" id="T8a-cd-JVE"/>
+                            <constraint firstItem="q7J-pQ-ZtJ" firstAttribute="leading" secondItem="Y9o-so-s2T" secondAttribute="leading" type="default" id="nBd-Ii-XNc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Central" id="qzP-bt-9oF"/>
                     <connections>
-                        <outlet property="textview" destination="x8A-vY-Jwn" id="ag1-CZ-qwh"/>
+                        <outlet property="signalLabel" destination="q7J-pQ-ZtJ" id="5zJ-i6-6wc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LpQ-5J-p45" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -92,17 +94,6 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Here is a bunch of sample text.  Hold another device close to see the transfer happen." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ahP-qh-y5g">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="172" id="02z-hs-rh3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="CLX-Le-b13" id="7bO-X9-tKJ"/>
-                                </connections>
-                            </textView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Advertising" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GMc-4O-5iW">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="171" id="9AT-WB-28X"/>
@@ -116,22 +107,33 @@
                                     <action selector="switchChanged:" destination="CLX-Le-b13" eventType="valueChanged" id="43o-NP-8Em"/>
                                 </connections>
                             </switch>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QBD-81-LUH">
+                                <segments>
+                                    <segment title="Red"/>
+                                    <segment title="Green"/>
+                                    <segment title="Orange"/>
+                                    <segment title="Blue"/>
+                                </segments>
+                                <connections>
+                                    <action selector="didChangeSegmentedControl:" destination="CLX-Le-b13" eventType="valueChanged" id="AYJ-A6-9uL"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.94615963855421703" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="SHW-C2-RN9" secondAttribute="bottom" constant="175" id="0ya-EM-KGl"/>
+                            <constraint firstItem="QBD-81-LUH" firstAttribute="leading" secondItem="HqI-5G-qR2" secondAttribute="leading" type="default" id="3Ms-Ma-7MB"/>
                             <constraint firstItem="SHW-C2-RN9" firstAttribute="centerY" secondItem="GMc-4O-5iW" secondAttribute="centerY" type="default" id="7Os-TG-TWq"/>
-                            <constraint firstItem="ahP-qh-y5g" firstAttribute="top" secondItem="HqI-5G-qR2" secondAttribute="top" constant="20" symbolic="YES" type="default" id="AZM-uY-Bxv"/>
-                            <constraint firstItem="ahP-qh-y5g" firstAttribute="leading" secondItem="HqI-5G-qR2" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Fey-fw-wI4"/>
                             <constraint firstAttribute="trailing" secondItem="SHW-C2-RN9" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Hfb-04-R3K"/>
                             <constraint firstItem="GMc-4O-5iW" firstAttribute="leading" secondItem="HqI-5G-qR2" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="NUi-cv-vvL"/>
-                            <constraint firstAttribute="trailing" secondItem="ahP-qh-y5g" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Vx9-DT-Knc"/>
+                            <constraint firstItem="QBD-81-LUH" firstAttribute="top" secondItem="HqI-5G-qR2" secondAttribute="top" constant="49" id="S46-6k-vFH"/>
+                            <constraint firstItem="QBD-81-LUH" firstAttribute="trailing" secondItem="HqI-5G-qR2" secondAttribute="trailing" type="default" id="kAF-TE-THN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Peripheral" id="krm-GA-4hL"/>
                     <connections>
                         <outlet property="advertisingSwitch" destination="SHW-C2-RN9" id="2XB-4o-9uq"/>
-                        <outlet property="textView" destination="ahP-qh-y5g" id="cBh-o6-3c7"/>
+                        <outlet property="segmentedControl" destination="QBD-81-LUH" id="4UH-uc-dwQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Naf-L5-Kmt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -158,6 +160,19 @@
         </scene>
     </scenes>
     <classes>
+        <class className="BTLECentralViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTLECentralViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="signalLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BTLEPeripheralViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTLEPeripheralViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="advertisingSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="segmentedControl" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
