--- a/FutureStop/MainStoryboard_iPad.storyboard
+++ b/FutureStop/MainStoryboard_iPad.storyboard
@@ -38,12 +38,27 @@
                                     <segue destination="uwv-lI-X9n" kind="push" id="UgC-2U-ETb"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mh9-f1-xJv">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Fence">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="xFy-2N-BoE" kind="push" id="dWw-uy-8vc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2jc-Td-doI" firstAttribute="top" secondItem="5" secondAttribute="top" constant="222" id="0gz-43-amH"/>
                             <constraint firstItem="Zzy-RR-Ijz" firstAttribute="top" secondItem="5" secondAttribute="top" constant="338" id="G1Q-Ts-I3P"/>
+                            <constraint firstAttribute="bottom" secondItem="Mh9-f1-xJv" secondAttribute="bottom" constant="427" id="LRp-SH-aKR"/>
                             <constraint firstItem="Zzy-RR-Ijz" firstAttribute="centerX" secondItem="2jc-Td-doI" secondAttribute="centerX" type="default" id="dqB-mV-zJc"/>
+                            <constraint firstItem="Mh9-f1-xJv" firstAttribute="centerX" secondItem="Zzy-RR-Ijz" secondAttribute="centerX" type="default" id="gTr-2Z-yxr"/>
                             <constraint firstItem="2jc-Td-doI" firstAttribute="centerX" secondItem="5" secondAttribute="centerX" type="default" id="msq-na-lcD"/>
                         </constraints>
                     </view>
@@ -108,6 +123,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="34q-pa-9fg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1691" y="422"/>
+        </scene>
+        <!--Fence View Controller-->
+        <scene sceneID="2h0-1V-1tf">
+            <objects>
+                <viewController id="xFy-2N-BoE" customClass="FSFenceViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qX8-fg-aDc">
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lu5-x6-Q5b">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="477" id="mzk-pw-zN1"/>
+                                    <constraint firstAttribute="height" constant="277" id="sZ1-yF-AQ0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="lu5-x6-Q5b" secondAttribute="bottom" constant="127" id="TH7-mi-bN6"/>
+                            <constraint firstItem="lu5-x6-Q5b" firstAttribute="leading" secondItem="qX8-fg-aDc" secondAttribute="leading" constant="182" id="U1h-h2-M7Z"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Spq-mW-s2y"/>
+                    <connections>
+                        <outlet property="label" destination="lu5-x6-Q5b" id="gG1-Gb-rtg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="urb-DG-jqB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="748" y="-1577"/>
         </scene>
         <!--Central View Controller-->
         <scene sceneID="3ue-Sl-rEk">
@@ -189,6 +237,12 @@
                 <relationship kind="action" name="switchChanged:"/>
                 <relationship kind="outlet" name="advertisingSwitch" candidateClass="UISwitch"/>
                 <relationship kind="outlet" name="segmentedControl" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="FSFenceViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FSFenceViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="label" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
